[workspace]
members = ["packages/*", 
"contracts/terraswap_factory",
"contracts/terraswap_pair",
"contracts/terraswap_token",
"contracts/terraswap_router",
"contracts/mocks/cw20-token"
]

[profile.release.package.terraswap]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
