[package]
name = "astroport-lbp-pair"
version = "1.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
astroport-lbp = { path = "../../packages/astroport-lbp", default-features = false, version = "1.1.0"}
cw2 = "0.8"
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.2.0"

[dependencies.fixed]
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dev-dependencies]
cosmwasm-vm = { version = "0.16.1", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.16.0"
terra-cosmwasm = { version = "2.2.0" }
astroport-lbp-token = {path = "../token" }
cw-multi-test = "0.8.0"
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}
proptest = "0.10.1"
