[package]
name = "terraswap-factory"
version = "1.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Terraswap factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
terraswap_lbp = { path = "../../packages/terraswap_lbp", default-features = false, version = "1.1.0"}
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = {version = "0.8.0", features = ['iterator']}
cw2 = "0.8"
protobuf = { version = "2", features = ["with-bytes"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-vm = { version = "0.16.1", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.16.0"
terra-multi-test = {git = "https://github.com/astroport-fi/terra-plus.git"}
terraswap-pair = {path = "../terraswap_pair"}
terraswap-token = {path = "../terraswap_token"}
