[package]
name = "cw20-token"
version = "1.0.0"
authors = ["Alien Hunter on Mars"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = "0.8" 
cw2 = "0.8" 
cw20 = "0.8" 
cw20-base = { version = "0.8", features = ["library"] }

cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6.3"
thiserror = "1.0.20"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }